--- a/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
+++ b/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
@@ -1,35 +1,48 @@
 <form #searchForm="ngForm" autocomplete="off">
   <div class="row">
       <div class="form-group  col-md-2 padding-rl5">
-          <input [(ngModel)]="flightService.oneWayModel.OriginCity" name="OriginCity" #OriginCity [typeahead]="citiesFrom" typeaheadOptionField="Name"
+          <input autocomplete="off" [(ngModel)]="flightService.oneWayModel.OriginCity" name="OriginCity" #OriginCity [typeahead]="citiesFrom" typeaheadOptionField="Name"
             class="form-control" placeholder="{{ 'FlightOneWay.From' | translate }}" [typeaheadOptionsLimit]="7"
             [typeaheadMinLength]="0" (keyup)="updateCitiesFrom($event)" (typeaheadOnSelect)="selectCity($event,'from')">
         </div>
     
         <div class="form-group  col-md-2 padding-rl5">
-          <input [(ngModel)]="flightService.oneWayModel.DestinationCity" name="DestinationCity" #DestinationCity [typeahead]="citiesTo" typeaheadOptionField="Name" class="form-control"
+          <input autocomplete="off" [(ngModel)]="flightService.oneWayModel.DestinationCity" name="DestinationCity" #DestinationCity [typeahead]="citiesTo" typeaheadOptionField="Name" class="form-control"
             placeholder="{{ 'FlightOneWay.To' | translate }}" [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0"
             (keyup)="updateCitiesTo($event)" (typeaheadOnSelect)="selectCity($event,'to')">
         </div>
 
     <div class="form-group  col-md-3 padding-rl5">
-      <input type="text" [(ngModel)]="flightService.oneWayModel.Date" name="Date" #Date placeholder="{{ 'FlightOneWay.DepartingTime' | translate }}" class="form-control" bsDatepicker>
+      <input autocomplete="off" type="text" [(ngModel)]="flightService.oneWayModel.Date" name="Date" #Date placeholder="{{ 'FlightOneWay.DepartingTime' | translate }}" class="form-control" bsDatepicker>
     </div>
 
     <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" [(ngModel)]="flightService.oneWayModel.Adult" class="form-control" 
-          placeholder="{{ 'FlightOneWay.AdultEconomy' | translate }}"
-          placement="bottom"  [popover]="popTemplate" [outsideClick]="true">
+
+        <input type="text" class="form-control" readonly placeholder="{{ 'FlightOneWay.AdultEconomy' | translate }}"
+          [value]="flightService.oneWayModel.searchOption" placement="bottom" [popover]="popTemplate" [outsideClick]="true">
+  
         <ng-template #popTemplate>
           <div class="form-group">
             <label>{{ 'FlightOneWay.Adult' | translate }}</label>
-            <input type="number" class="form-control plus" name="Adult" [(ngModel)]="flightService.oneWayModel.Adult" #Adult placeholder="0">
+            <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Adult"
+              [(ngModel)]="flightService.oneWayModel.Adult" #Adult placeholder="0">
           </div>
           <div class="form-group">
             <label> {{ 'FlightOneWay.Children' | translate }}</label>
-            <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.oneWayModel.Children" #Child placeholder="0">
+            <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Child"
+              [(ngModel)]="flightService.oneWayModel.Children" #Child placeholder="0">
           </div>
-        </ng-template>        
+          <div class="form-group">
+            <label> {{ 'FlightOneWay.Class' | translate }}</label>
+            <select input class="form-control" (change)="changeOption()" name="Class" [(ngModel)]="flightService.oneWayModel.Class"
+              #Class="ngModel">
+              <option *ngFor="let class of flightService.Classes" [value]="class">
+                {{class}}
+              </option>
+            </select>
+          </div>
+        </ng-template>
+  
       </div>
 
       <div class="form-group  col-md-2 padding-rl5">
