--- a/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
+++ b/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
@@ -2,32 +2,45 @@
   <div class="row">
 
     <div class="form-group  col-md-2 padding-rl5">
-      <input [(ngModel)]="flightService.roundTripModel.OriginCity" name="OriginCity" #OriginCity [typeahead]="citiesFrom" typeaheadOptionField="Name"
-        class="form-control" placeholder="{{ 'FlightRoundTrip.From' | translate }}" [typeaheadOptionsLimit]="7"
-        [typeaheadMinLength]="0" (keyup)="updateCitiesFrom($event)" (typeaheadOnSelect)="selectCity($event,'from')">
+      <input autocomplete="off" [(ngModel)]="flightService.roundTripModel.OriginCity" name="OriginCity" #OriginCity
+        [typeahead]="citiesFrom" typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightRoundTrip.From' | translate }}"
+        [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom($event)" (typeaheadOnSelect)="selectCity($event,'from')">
     </div>
 
     <div class="form-group  col-md-2 padding-rl5">
-      <input [(ngModel)]="flightService.roundTripModel.DestinationCity" name="DestinationCity" #DestinationCity [typeahead]="citiesTo" typeaheadOptionField="Name" class="form-control"
-        placeholder="{{ 'FlightRoundTrip.To' | translate }}" [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0"
-        (keyup)="updateCitiesTo($event)" (typeaheadOnSelect)="selectCity($event,'to')">
+      <input autocomplete="off" [(ngModel)]="flightService.roundTripModel.DestinationCity" name="DestinationCity"
+        #DestinationCity [typeahead]="citiesTo" typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightRoundTrip.To' | translate }}"
+        [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo($event)" (typeaheadOnSelect)="selectCity($event,'to')">
     </div>
-    
+
     <div class="form-group  col-md-3 padding-rl5">
-      <input  [(ngModel)]="flightService.roundTripModel.Dates" name="Dates" #Date placeholder="{{ 'FlightRoundTrip.DepartingArrivalTime' | translate }}" class="form-control"
-        bsDaterangepicker>
+      <input autocomplete="off" [(ngModel)]="flightService.roundTripModel.Dates" name="Dates" #Date placeholder="{{ 'FlightRoundTrip.DepartingArrivalTime' | translate }}"
+        class="form-control" bsDaterangepicker>
     </div>
     <div class="form-group  col-md-3 padding-rl5">
-      <input class="form-control"  placeholder="{{ 'FlightRoundTrip.AdultEconomy' | translate }}"
-        placement="bottom" [popover]="popTemplate" [outsideClick]="true">
+
+      <input type="text" class="form-control" readonly placeholder="{{ 'FlightRoundTrip.AdultEconomy' | translate }}"
+        [value]="flightService.roundTripModel.searchOption" placement="bottom" [popover]="popTemplate" [outsideClick]="true">
+
       <ng-template #popTemplate>
         <div class="form-group">
           <label>{{ 'FlightRoundTrip.Adult' | translate }}</label>
-          <input type="number" class="form-control plus" name="Adult" [(ngModel)]="flightService.roundTripModel.Adult" #Adult placeholder="0">
+          <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Adult"
+            [(ngModel)]="flightService.roundTripModel.Adult" #Adult placeholder="0">
         </div>
         <div class="form-group">
           <label> {{ 'FlightRoundTrip.Children' | translate }}</label>
-          <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.roundTripModel.Children" #Child placeholder="0">
+          <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Child"
+            [(ngModel)]="flightService.roundTripModel.Children" #Child placeholder="0">
+        </div>
+        <div class="form-group">
+          <label> {{ 'FlightRoundTrip.Class' | translate }}</label>
+          <select input class="form-control" (change)="changeOption()" name="Class" [(ngModel)]="flightService.roundTripModel.Class"
+            #Class="ngModel">
+            <option *ngFor="let class of flightService.Classes" [value]="class">
+              {{class}}
+            </option>
+          </select>
         </div>
       </ng-template>
 
@@ -36,7 +49,7 @@
       <button type="submit" (click)="search()" class="btn btn-orange" style="width:100%;">{{
         'FlightRoundTrip.Search' |
         translate }}
-      
+
       </button>
     </div>
   </div>
@@ -44,7 +57,7 @@
   <div class="row" style="padding:15px;">
     <label class="check">
       {{ 'FlightRoundTrip.NoneStopFlight' | translate }}
-      <input type="checkbox" name="DirectFlight" #DirectFlight [(ngModel)]="flightService.roundTripModel.DirectFlight"  >
+      <input type="checkbox" name="DirectFlight" #DirectFlight [(ngModel)]="flightService.roundTripModel.DirectFlight">
       <span class="checkmark"></span>
     </label>
 
