--- a/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
+++ b/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
@@ -15,7 +15,7 @@
           [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo1($event)" (typeaheadOnSelect)="selectCity1($event,'To')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input autocomplete="off" type="text" [(ngModel)]="flightService.multiCitiesModel.Date1" name="Date1" #Date1 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+        <input autocomplete="off" readonly type="text" [(ngModel)]="flightService.multiCitiesModel.Date1" name="Date1" #Date1 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
           class="form-control" bsDatepicker>
       </div>
       <div class="form-group  col-md-3 padding-rl5">
@@ -27,12 +27,12 @@
             <div class="form-group">
               <label>{{ 'FlightMultiCity.Adult' | translate }}</label>
               <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Adult"
-                [(ngModel)]="flightService.multiCitiesModel.Adult" #Adult placeholder="0">
+                [(ngModel)]="flightService.multiCitiesModel.Adult" #Adult max="9" min="1" (keyup)="checkE($event.target.value,'adult')" placeholder="0">
             </div>
             <div class="form-group">
               <label> {{ 'FlightMultiCity.Children' | translate }}</label>
               <input autocomplete="off" type="number" class="form-control plus" (change)="changeOption()" name="Child"
-                [(ngModel)]="flightService.multiCitiesModel.Children" #Child placeholder="0">
+                [(ngModel)]="flightService.multiCitiesModel.Children" #Child max="9" min="0" (keyup)="checkE($event.target.value,'child')" placeholder="0">
             </div>
             <div class="form-group">
               <label> {{ 'FlightMultiCity.Class' | translate }}</label>
@@ -61,7 +61,7 @@
           [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo2($event)" (typeaheadOnSelect)="selectCity2($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input autocomplete="off" type="text" [(ngModel)]="flightService.multiCitiesModel.Date2" name="Date2" #Date2 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+        <input autocomplete="off" readonly type="text" [(ngModel)]="flightService.multiCitiesModel.Date2" name="Date2" #Date2 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
           class="form-control" bsDatepicker>
       </div>
 
@@ -80,7 +80,7 @@
           [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo3($event)" (typeaheadOnSelect)="selectCity3($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input autocomplete="off" type="text" [(ngModel)]="flightService.multiCitiesModel.Date3" name="Date3" #Date3 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+        <input autocomplete="off" readonly type="text" [(ngModel)]="flightService.multiCitiesModel.Date3" name="Date3" #Date3 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
           class="form-control" bsDatepicker>
       </div>
       <div *ngIf="flightService.multiCityFlightsNumber == 3" class="form-group  col-md-3 padding-rl5">
@@ -102,7 +102,7 @@
           [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo4($event)" (typeaheadOnSelect)="selectCity4($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input autocomplete="off" type="text" [(ngModel)]="flightService.multiCitiesModel.Date4" name="Date4" #Date4 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+        <input autocomplete="off" readonly type="text" [(ngModel)]="flightService.multiCitiesModel.Date4" name="Date4" #Date4 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
           class="form-control" bsDatepicker>
       </div>
       <div *ngIf="flightService.multiCityFlightsNumber == 4" class="form-group  col-md-3 padding-rl5">
@@ -124,7 +124,7 @@
           [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo5($event)" (typeaheadOnSelect)="selectCity5($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input autocomplete="off" type="text" [(ngModel)]="flightService.multiCitiesModel.Date5" name="Date5" #Date5 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+        <input autocomplete="off" readonly type="text" [(ngModel)]="flightService.multiCitiesModel.Date5" name="Date5" #Date5 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
           class="form-control" bsDatepicker>
       </div>
       <div class="form-group  col-md-3 padding-rl5">
